--- a/page1.html
+++ b/page1.html
@@ -62,7 +62,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="header6 cid-rTasxu4r3t mbr-fullscreen" id="header6-9">
+<section class="engine"><a href="https://mobirise.info/h">create your own web page</a></section><section class="header6 cid-rTasxu4r3t mbr-fullscreen" id="header6-9">
 
     
 
@@ -106,7 +106,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="YxSiN2jR6BKiFFYB3GQ9Ysrkv8qbiqUJmwoC/dIwMcw+FIzQ2YTXQV9MAzokwy8q67Lbps9vJZFOBDX1SuI/wsZ0JvffuXQByGKeb1QwdLvLJ+F7sRwOHIYh7rhHT5pL">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="4cZqRVdlgiDJwPg4uXVo0seDEhw5QG1T2M6zxn3BSv6uvZntG4NFZg39ZGISNIiZW8s41XaqrxZ+ZhuMcDInLoB/zcIA4QfhhEMSWLkBJBhgaGWzrBAT27x+w/0Xz2Sb">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -215,34 +215,34 @@
         <h3 class="mbr-section-title align-center mbr-fonts-style display-2">
             Menu</h3>
         <h4 class="mbr-section-subtitle align-center pb-4 mbr-fonts-style display-5"></h4>
-        <div class="row mbr-gallery" data-toggle="modal" data-target="#rTbiDlLVmO">
+        <div class="row mbr-gallery" data-toggle="modal" data-target="#rTblbOSMIA">
             <div class="col-sm-6 col-md-4 col-lg-3 item gallery-image">
                 <div class="item-wrapper">
-                    <img class="w-100" src="assets/images/-20200314110238-500x323.png" alt="" data-slide-to="0" title="" data-target="#rTbiDlLnaW">
+                    <img class="w-100" src="assets/images/-20200314110238-500x323.png" alt="" data-slide-to="0" title="" data-target="#rTblbOS43F">
                 </div>
             </div>
             <div class="col-sm-6 col-md-4 col-lg-3 item gallery-image">
                 <div class="item-wrapper">
-                    <img class="w-100" src="assets/images/-20200314110254-500x331.png" alt="" data-slide-to="1" title="" data-target="#rTbiDlLnaW">
+                    <img class="w-100" src="assets/images/-20200314110254-500x331.png" alt="" data-slide-to="1" title="" data-target="#rTblbOS43F">
                 </div>
             </div><div class="col-sm-6 col-md-4 col-lg-3 item gallery-image">
                 <div class="item-wrapper">
-                    <img class="w-100" src="assets/images/-20200314110242-499x333.png" alt="" data-slide-to="2" title="" data-target="#rTbiDlLnaW">
+                    <img class="w-100" src="assets/images/-20200314110242-499x333.png" alt="" data-slide-to="2" title="" data-target="#rTblbOS43F">
                 </div>
             </div>
             
             <div class="col-sm-6 col-md-4 col-lg-3 item gallery-image">
                 <div class="item-wrapper">
-                    <img class="w-100" src="assets/images/-20200314110358-500x331.png" alt="" data-slide-to="3" title="" data-target="#rTbiDlLnaW">
+                    <img class="w-100" src="assets/images/-20200314110358-500x331.png" alt="" data-slide-to="3" title="" data-target="#rTblbOS43F">
                 </div>
             </div>
         </div>
 
-        <div class="modal mbr-slider fade" tabindex="-1" role="dialog" aria-hidden="true" id="rTbiDlLVmO">
+        <div class="modal mbr-slider fade" tabindex="-1" role="dialog" aria-hidden="true" id="rTblbOSMIA">
             <div class="modal-dialog" role="document">
                 <div class="modal-content">
                     <div class="modal-body">
-                        <div class="carousel slide" data-ride="carousel" id="rTbiDlLnaW">
+                        <div class="carousel slide" data-ride="carousel" id="rTblbOS43F">
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
                                     <img class="d-block w-100" src="assets/images/-20200314110238-500x323.png" alt="">
@@ -258,18 +258,18 @@
                                 </div>
                             </div>
                             <ol class="carousel-indicators">
-                                <li data-slide-to="0" class="active" data-target="#rTbiDlLnaW"></li>
-                                <li data-slide-to="1" data-target="#rTbiDlLnaW"></li>
-                                <li data-slide-to="2" data-target="#rTbiDlLnaW"></li>
-                                <li data-slide-to="3" data-target="#rTbiDlLnaW"></li>
+                                <li data-slide-to="0" class="active" data-target="#rTblbOS43F"></li>
+                                <li data-slide-to="1" data-target="#rTblbOS43F"></li>
+                                <li data-slide-to="2" data-target="#rTblbOS43F"></li>
+                                <li data-slide-to="3" data-target="#rTblbOS43F"></li>
                             </ol>
                             <a role="button" href="" class="close" data-dismiss="modal" aria-label="Close">
                             </a>
-                            <a class="carousel-control-prev carousel-control" role="button" data-slide="prev" href="#rTbiDlLnaW">
+                            <a class="carousel-control-prev carousel-control" role="button" data-slide="prev" href="#rTblbOS43F">
                                 <span class="mbri-left mbr-iconfont" aria-hidden="true"></span>
                                 <span class="sr-only">Previous</span>
                             </a>
-                            <a class="carousel-control-next carousel-control" role="button" data-slide="next" href="#rTbiDlLnaW">
+                            <a class="carousel-control-next carousel-control" role="button" data-slide="next" href="#rTblbOS43F">
                                 <span class="mbri-right mbr-iconfont" aria-hidden="true"></span>
                                 <span class="sr-only">Next</span>
                             </a>
@@ -291,34 +291,34 @@
         <h3 class="mbr-section-title align-center mbr-fonts-style display-2">
             Deruvative</h3>
         <h4 class="mbr-section-subtitle align-center pb-4 mbr-fonts-style display-5"></h4>
-        <div class="row mbr-gallery" data-toggle="modal" data-target="#rTbiDlLSKu">
+        <div class="row mbr-gallery" data-toggle="modal" data-target="#rTblbOSftx">
             <div class="col-sm-6 col-md-4 col-lg-3 item gallery-image">
                 <div class="item-wrapper">
-                    <img class="w-100" src="assets/images/-20200314103330-510x383.png" alt="" data-slide-to="0" title="" data-target="#rTbiDlLNHQ">
+                    <img class="w-100" src="assets/images/-20200314103330-510x383.png" alt="" data-slide-to="0" title="" data-target="#rTblbOSiZ7">
                 </div>
             </div>
             <div class="col-sm-6 col-md-4 col-lg-3 item gallery-image">
                 <div class="item-wrapper">
-                    <img class="w-100" src="assets/images/-20200314103334-510x383.png" alt="" data-slide-to="1" title="" data-target="#rTbiDlLNHQ">
+                    <img class="w-100" src="assets/images/-20200314103334-510x383.png" alt="" data-slide-to="1" title="" data-target="#rTblbOSiZ7">
                 </div>
             </div>
             <div class="col-sm-6 col-md-4 col-lg-3 item gallery-image">
                 <div class="item-wrapper">
-                    <img class="w-100" src="assets/images/-20200314103341-510x383.png" alt="" data-slide-to="2" title="" data-target="#rTbiDlLNHQ">
+                    <img class="w-100" src="assets/images/-20200314103341-510x383.png" alt="" data-slide-to="2" title="" data-target="#rTblbOSiZ7">
                 </div>
             </div>
             <div class="col-sm-6 col-md-4 col-lg-3 item gallery-image">
                 <div class="item-wrapper">
-                    <img class="w-100" src="assets/images/-20200314103349-510x383.png" alt="" data-slide-to="3" title="" data-target="#rTbiDlLNHQ">
+                    <img class="w-100" src="assets/images/-20200314103349-510x383.png" alt="" data-slide-to="3" title="" data-target="#rTblbOSiZ7">
                 </div>
             </div>
         </div>
 
-        <div class="modal mbr-slider fade" tabindex="-1" role="dialog" aria-hidden="true" id="rTbiDlLSKu">
+        <div class="modal mbr-slider fade" tabindex="-1" role="dialog" aria-hidden="true" id="rTblbOSftx">
             <div class="modal-dialog" role="document">
                 <div class="modal-content">
                     <div class="modal-body">
-                        <div class="carousel slide" data-ride="carousel" id="rTbiDlLNHQ">
+                        <div class="carousel slide" data-ride="carousel" id="rTblbOSiZ7">
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
                                     <img class="d-block w-100" src="assets/images/-20200314103330-510x383.png" alt="">
@@ -334,18 +334,18 @@
                                 </div>
                             </div>
                             <ol class="carousel-indicators">
-                                <li data-slide-to="0" class="active" data-target="#rTbiDlLNHQ"></li>
-                                <li data-slide-to="1" data-target="#rTbiDlLNHQ"></li>
-                                <li data-slide-to="2" data-target="#rTbiDlLNHQ"></li>
-                                <li data-slide-to="3" data-target="#rTbiDlLNHQ"></li>
+                                <li data-slide-to="0" class="active" data-target="#rTblbOSiZ7"></li>
+                                <li data-slide-to="1" data-target="#rTblbOSiZ7"></li>
+                                <li data-slide-to="2" data-target="#rTblbOSiZ7"></li>
+                                <li data-slide-to="3" data-target="#rTblbOSiZ7"></li>
                             </ol>
                             <a role="button" href="" class="close" data-dismiss="modal" aria-label="Close">
                             </a>
-                            <a class="carousel-control-prev carousel-control" role="button" data-slide="prev" href="#rTbiDlLNHQ">
+                            <a class="carousel-control-prev carousel-control" role="button" data-slide="prev" href="#rTblbOSiZ7">
                                 <span class="mbri-left mbr-iconfont" aria-hidden="true"></span>
                                 <span class="sr-only">Previous</span>
                             </a>
-                            <a class="carousel-control-next carousel-control" role="button" data-slide="next" href="#rTbiDlLNHQ">
+                            <a class="carousel-control-next carousel-control" role="button" data-slide="next" href="#rTblbOSiZ7">
                                 <span class="mbri-right mbr-iconfont" aria-hidden="true"></span>
                                 <span class="sr-only">Next</span>
                             </a>
